// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components: Result matches snapshot 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  color: #414141;
  gap: 4px;
}

.emotion-0 .MuiSvgIcon-root {
  fill: #FD3B4C;
}

.emotion-1 {
  margin: 0;
  font-size: 1rem;
  white-space: pre-wrap;
  letter-spacing: 0.5px;
  font-family: "Noto Sans",sans-serif;
  font-weight: 400;
  line-height: 1.5;
}

<span
  className="emotion-0"
>
  <svg />
  <span
    className="MuiTypography-root MuiTypography-body1 emotion-1"
  >
    fail
  </span>
</span>
`;

exports[`components: Result matches snapshot success 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  color: #414141;
  gap: 4px;
}

.emotion-0 .MuiSvgIcon-root {
  fill: #1EC490;
}

.emotion-1 {
  margin: 0;
  font-size: 1rem;
  white-space: pre-wrap;
  letter-spacing: 0.5px;
  font-family: "Noto Sans",sans-serif;
  font-weight: 400;
  line-height: 1.5;
}

<span
  className="emotion-0"
>
  <svg />
  <span
    className="MuiTypography-root MuiTypography-body1 emotion-1"
  >
    success
  </span>
</span>
`;
